--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
-<html>
-  
+<html lang="en">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <head>
+    <title>Montes Portfolio</title>
+    <link href="css/styles.css" rel="stylesheet" />
+
+  </head>
+  <body>
+
+  </body>
 </html>
