--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   </head>
   <body>
     <header>
+        <a class="navicon"><img src="images/navicon.png"></a>
         <nav>
-            <ul>
+            <ul class="mainmenu">
                 <!-- <li><a href="docs/FirstnameLastnameResume.pdf">Resume</a></li> -->
                 <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
                 <li><a href="projects/java_project/index.html">Java Project</a></li>
                 <li><a href="projects/csharp_project/index.html">C# Project</a></li>
                 <li><a href="http://catalog.southeasttech.edu/preview_program.php?catoid=17&poid=2004&hl=%22programming%22" target="_blank">STC CIS Curriculum</a></li>
-              </ul>
+            </ul>
         </nav>
         <h1>Mario Montes</h1>
     </header>
