Added docs folder and one syllabus to verify compatibility

--- a/CIS_Syllabi.html
+++ b/CIS_Syllabi.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
 <html>
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <head>
+      <title>Completed CIS Course Syllabi</title>
+      <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body>
+        <h2>Completed CIS Course Syllabi</h2>
+        <ul>
+            <li><a href="docs/CIS266_Syllabus.pdf">CIS 266 Syllabus</a></li>
+        </ul>
+    </body>
 </html>
