Added navbar to syllabi page and reuploaded first syllabus

--- a/CIS_Syllabi.html
+++ b/CIS_Syllabi.html
@@ -6,9 +6,23 @@
       <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
+        <header>
+            <a class="navicon"><img src="images/navicon.png"></a>
+            <nav>
+                <ul class="mainmenu">
+                    <!-- <li><a href="docs/FirstnameLastnameResume.pdf">Resume</a></li> -->
+                    <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
+                    <li><a href="projects/java_project/index.html">Java Project</a></li>
+                    <li><a href="projects/csharp_project/index.html">C# Project</a></li>
+                    <li><a href="http://catalog.southeasttech.edu/preview_program.php?catoid=17&poid=2004&hl=%22programming%22" target="_blank">STC CIS Curriculum</a></li>
+                </ul>
+            </nav>
+        </header>
         <h2>Completed CIS Course Syllabi</h2>
         <ul>
             <li><a href="docs/CIS266_Syllabus.pdf">CIS 266 Syllabus</a></li>
+            <li></li>
+            <li></li>
         </ul>
     </body>
 </html>
