Hopefully fixed link to first syllabus

--- a/CIS_Syllabi.html
+++ b/CIS_Syllabi.html
@@ -20,7 +20,7 @@
         </header>
         <h2>Completed CIS Course Syllabi</h2>
         <ul>
-            <li><a href="docs/CIS266_Syllabus.pdf">CIS 266 Syllabus</a></li>
+            <li><a href="docs/CIS266_Syllabus.pdf" target="_blank">CIS 266 Syllabus</a></li>
             <li></li>
             <li></li>
         </ul>
