Added remaining syllabi to docs folder and corresponding links along with updating CIS_Syllabi.html

--- a/CIS_Syllabi.html
+++ b/CIS_Syllabi.html
@@ -19,10 +19,29 @@
             </nav>
         </header>
         <h2>Completed CIS Course Syllabi</h2>
+        <h3>The following page has a list of the syllabi of completed computer science courses completed at Southeast Technical College
+            and when they were completed.
+        </h3>
+        <br /><br />
         <ul>
-            <li><a href="docs/CIS266_Syllabus.pdf" target="_blank">CIS 266 Syllabus</a></li>
-            <li></li>
-            <li></li>
+            <li>2023-2024 School Year - Fall Term</li>
+            <li><a href="docs/CIS130_Syllabus.pdf" target="_blank">CIS 130 - Intro to Programming</a></li>
+            <li><a href="docs/CIS195_Syllabus.pdf" target="_blank">CIS 195 - Internet Programming Essentials</a></li>
+            <li>2023-2024 School Year - Spring Term</li>
+            <li><a href="docs/CIS131_Syllabus.pdf" target="_blank">CIS 131 - C# Programming</a></li>
+            <li><a href="docs/CIS149_Syllabus.pdf" target="_blank">CIS 149 - Intro to JAVA</a></li>
+            <li><a href="docs/CIS194_Syllabus.pdf" target="_blank">CIS 194 - Intro to Databases</a></li>
+            <li><a href="docs/CIS196_Syllabus.pdf" target="_blank">CIS 196 - Internet Programming II</a></li>
+            <li>2023-2024 School Year - Summer Term</li>            
+            <li><a href="docs/CIS241_Syllabus.pdf" target="_blank">CIS 241 - Dynamic Website Development</a></li>
+            <li>2024-2025 School Year - Fall Term</li>
+            <li><a href="docs/CIS236_Syllabus.pdf" target="_blank">CIS 236 - Intro to MS Web Development</a></li>
+            <li><a href="docs/CIS249_Syllabus.pdf" target="_blank">CIS 249 - Advanced Object Oriented Programming</a></li>
+            <li>2024-2025 School Year - Spring Term</li>
+            <li><a href="docs/CIS266_Syllabus.pdf" target="_blank">CIS 266 - Web Services</a></li>
+            <li><a href="docs/CIS279_Syllabus.pdf" target="_blank">CIS 279 - Advanced Databases</a></li>
+            <li><a href="docs/CIS293_Syllabus.pdf" target="_blank">CIS 293 - Advanced Technologies</a></li>
+            <li><a href="docs/CIS296_Syllabus.pdf" target="_blank">CIS 296 - Advanced MS Web Development</a></li>
         </ul>
     </body>
 </html>
