Added link to index page for navbar

--- a/CIS_Syllabi.html
+++ b/CIS_Syllabi.html
@@ -10,6 +10,7 @@
             <a class="navicon"><img src="images/navicon.png"></a>
             <nav>
                 <ul class="mainmenu">
+                    <li><a href="index.html">Home</a></li>
                     <!-- <li><a href="docs/FirstnameLastnameResume.pdf">Resume</a></li> -->
                     <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
                     <li><a href="projects/java_project/index.html">Java Project</a></li>
