--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
                 <li><a href="projects/java_project/index.html">Java Project</a></li>
                 <li><a href="projects/csharp_project/index.html">C# Project</a></li>
-                <li><a href="http://catalog.southeasttech.edu/preview_program.php?catoid=17&poid=2004&hl=%22programming%22" target="_blank">STC CIS Curriculum</a></li>
+                <li><a href="https://catalog.southeasttech.edu/preview_program.php?catoid=29&poid=3606&returnto=21254" target="_blank">STC CIS Curriculum</a></li>
             </ul>
         </nav>
         <h1>Mario Montes</h1>
