Added welcome message to home page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
                 <li><a href="https://catalog.southeasttech.edu/preview_program.php?catoid=29&poid=3606&returnto=21254" target="_blank">STC CIS Curriculum</a></li>
             </ul>
         </nav>
-        <h1>Mario Montes</h1>
+        <h1>Mario Montes Portfolio Site</h1>
     </header>
+    <h3>Hello, and welcome to my portfolio site! The links in the navbar above will take you to past projects, my resume and more.
+      I thank you for your time and consideration in taking a look at my work so far.
+    </h3>
   </body>
 </html>
