--- a/CIS_Syllabi.html
+++ b/CIS_Syllabi.html
@@ -15,8 +15,8 @@
                     <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
                     <li><a href="projects/java_project/index.html">Java Project</a></li>
                     <li><a href="projects/csharp_project/index.html">C# Project</a></li>
-                    <li><a href="projects/php_dynamic_project/index.html">CIS 241 Dynamic Project</a></li>
-                    <li><a href="projects/web_services/index.html">Web Services projects</a></li>
+                    <li><a href="projects/php_dynamic_project/index.html">Dynamic Project</a></li>
+                    <li><a href="projects/web_services/index.html">Web Services Projects</a></li>
                     <li><a href="https://catalog.southeasttech.edu/preview_program.php?catoid=29&poid=3606&returnto=21254" target="_blank">STC CIS Curriculum</a></li>
                 </ul>
             </nav>
