Added live demo link and text to page

--- a/projects/php_dynamic_project/index.html
+++ b/projects/php_dynamic_project/index.html
@@ -7,19 +7,33 @@
   </head>
   <body>
     <header>
-            <a class="navicon"><img src="images/navicon.png"></a>
-            <nav>
-                <ul class="mainmenu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="docs/MarioMontesResume.pdf" target="_blank">Resume</a></li>
-                    <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
-                    <li><a href="projects/java_project/index.html">Java Project</a></li>
-                    <li><a href="projects/csharp_project/index.html">C# Project</a></li>
-                    <li><a href="projects/php_dynamic_project/index.html">Dynamic Project</a></li>
-                    <li><a href="projects/web_services/index.html">Web Services</a></li>
-                    <li><a href="https://catalog.southeasttech.edu/preview_program.php?catoid=29&poid=3606&returnto=21254" target="_blank">STC CIS Curriculum</a></li>
-                </ul>
-            </nav>
-        </header>
+        <a class="navicon"><img src="images/navicon.png"></a>
+        <nav>
+            <ul class="mainmenu">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="docs/MarioMontesResume.pdf" target="_blank">Resume</a></li>
+                <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
+                <li><a href="projects/java_project/index.html">Java Project</a></li>
+                <li><a href="projects/csharp_project/index.html">C# Project</a></li>
+                <li><a href="projects/php_dynamic_project/index.html">Dynamic Project</a></li>
+                <li><a href="projects/web_services/index.html">Web Services</a></li>
+                <li><a href="https://catalog.southeasttech.edu/preview_program.php?catoid=29&poid=3606&returnto=21254" target="_blank">STC CIS Curriculum</a></li>
+            </ul>
+        </nav>
+    </header>
+    <h1>CIS 241 Dynamic Project - Music Manager Site</h1>
+    <h2>Project Description</h2>
+    <h4>This project allows users to view a list of songs and filter those songs by arist album and genre.
+        It also allows users to add songs and artists to the music database.
+    </h4>
+    <h2>Technologies Used</h2>
+    <ul>
+      <li>PHP</li>
+      <li>MySQL</li>
+      <li>HTML/CSS</li>
+      <li>JavaScript</li>
+    </ul>
+    <h2>Live Demo</h2>
+    <h4><a href="http://php-music-site.wuaze.com/index.php">Launch Dynamic Project Demo</a></h4>
   </body>
 </html>
