--- a/projects/php_dynamic_project/index.html
+++ b/projects/php_dynamic_project/index.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <head>
     <title>Montes Portfolio</title>
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="../../css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
