Added screenshots and put them on the php project page

--- a/projects/php_dynamic_project/index.html
+++ b/projects/php_dynamic_project/index.html
@@ -33,6 +33,12 @@
       <li>HTML/CSS</li>
       <li>JavaScript</li>
     </ul>
+    <h2>Sample Screenshots</h2>
+    <h3>Home Page</h3>
+    <h3>Song List Page</h3>
+    <img src="../../images/song_list.png" />
+    <h3>Add Song Page</h3>
+    <img src="../../images/add_song.png" />
     <h2>Live Demo</h2>
     <h4><a href="http://php-music-site.wuaze.com/index.php">Launch Dynamic Project Demo</a></h4>
   </body>
