Added home page image to folder and appropriate page

--- a/projects/php_dynamic_project/index.html
+++ b/projects/php_dynamic_project/index.html
@@ -35,10 +35,11 @@
     </ul>
     <h2>Sample Screenshots</h2>
     <h3>Home Page</h3>
+    <img src="../../images/home_page.png" alt="Home Page Screenshot" />
     <h3>Song List Page</h3>
-    <img src="../../images/song_list.png" />
+    <img src="../../images/song_list.png" alt="Song List Screenshot" />
     <h3>Add Song Page</h3>
-    <img src="../../images/add_song.png" />
+    <img src="../../images/add_song.png" alt="Add Song Form Screenshot" />
     <h2>Live Demo</h2>
     <h4><a href="http://php-music-site.wuaze.com/index.php">Launch Dynamic Project Demo</a></h4>
   </body>
