Fixed nav links for project pages

--- a/projects/web_services/index.html
+++ b/projects/web_services/index.html
@@ -11,20 +11,23 @@
           <nav>
               <ul class="mainmenu">
                   <li><a href="index.html">Home</a></li>
-                  <li><a href="docs/MarioMontesResume.pdf" target="_blank">Resume</a></li>
-                  <li><a href="CIS_Syllabi.html">CIS Syllabi</a></li>
-                  <li><a href="projects/java_project/index.html">Java Project</a></li>
-                  <li><a href="projects/csharp_project/index.html">C# Project</a></li>
-                  <li><a href="projects/php_dynamic_project/index.html">Dynamic Project</a></li>
-                  <li><a href="projects/web_services/index.html">Web Services</a></li>
+                  <li><a href="../../docs/MarioMontesResume.pdf" target="_blank">Resume</a></li>
+                  <li><a href="../../CIS_Syllabi.html">CIS Syllabi</a></li>
+                  <li><a href="../../projects/java_project/index.html">Java Project</a></li>
+                  <li><a href="../../projects/csharp_project/index.html">C# Project</a></li>
+                  <li><a href="../../projects/php_dynamic_project/index.html">Dynamic Project</a></li>
+                  <li><a href="../../projects/web_services/index.html">Web Services</a></li>
                   <li><a href="https://catalog.southeasttech.edu/preview_program.php?catoid=29&poid=3606&returnto=21254" target="_blank">STC CIS Curriculum</a></li>
               </ul>
           </nav>
       </header>
       <h1>Sample Web Services Projects</h1>
       <h2>RESTful AJAX-JSON-PHP-MySQL DB Web Service</h2>
+      <h3>Sample Screenshots</h3>
       <h2>Unique CRUD JSON-PHP-MySQL RESTful Web Service</h2>
+      <h3>Sample Screenshots</h3>
       <h2>Java ProductDB class SOAP Web Service with Unique Product</h2>
+      <h3>Sample Screenshots</h3>
       <h2>Scrum 4 Team Project Videos and Slides</h2>
     </body>
 </html>
