Added functionality for live demo to open on new page

--- a/projects/php_dynamic_project/index.html
+++ b/projects/php_dynamic_project/index.html
@@ -44,6 +44,6 @@
     <img src="../../images/add_song.png" alt="Add Song Form Screenshot" style="width:100%; max-width:650px;" />
     <br />
     <h2>Live Demo</h2>
-    <h4><a href="http://php-music-site.wuaze.com/index.php">Launch Dynamic Project Demo</a></h4>
+    <h4><a href="http://php-music-site.wuaze.com/index.php" target="_blank">Launch Dynamic Project Demo</a></h4>
   </body>
 </html>
