Added content to web services page

--- a/projects/web_services/index.html
+++ b/projects/web_services/index.html
@@ -23,10 +23,21 @@
       </header>
       <h1>Sample Web Services Projects</h1>
       <h2>Unique CRUD JSON-PHP-MySQL RESTful Web Service</h2>
+      <h3>The following screenshots and sample code were from a project that had the purpose of creating a RESTful
+        Web Service with using JSON, PHP, and MySQL.
+      </h3>
       <h3>Sample Screenshots</h3>
-      <h3>Sample API Code</h3>
+      <h4>After Successfully Searching Author Record</h4>
+      <img src="../../images/search_author.png" alt="Author Record Search Form" style="width:100%; max-width:650px;" />
+      <br />
+      <h4>After Successfully Deleting Customer Record</h4>
+      <img src="../../images/delete_customer.png" alt="Customer Record Deletion Form" style="width:100%; max-width:650px;" />
+      <br />
+      <h4>DB Tester Page</h4>
+      <img src="../../images/db_tester.png" alt="DB Records Tester Page" style="width:100%; max-width:650px;" />
+      <h3>Sample PHP API Code</h3>
       <pre><code>
-        public function OnLoad() {
+    public function OnLoad() {
         if (isset($_POST['Request'])) {
             $request = $_POST['Request'];
             $type = $_POST['Type'];
@@ -51,5 +62,9 @@
       <h2>Java ProductDB class SOAP Web Service with Unique Product</h2>
       <h3>Sample Screenshots</h3>
       <h2>Scrum 4 Team Project Videos and Slides</h2>
+      <h3>The attached slides and video are from a presentation related to a Scrum Project that had the purpose
+        of creating a Java based HTML-JSP-Java Web Application along with a XML-SOAP Web Service Provider with
+        a JSP test client.
+      </h3>
     </body>
 </html>
