Added slides and video

--- a/projects/web_services/index.html
+++ b/projects/web_services/index.html
@@ -66,5 +66,10 @@
         of creating a Java based HTML-JSP-Java Web Application along with a XML-SOAP Web Service Provider with
         a JSP test client.
       </h3>
+      <br />
+      <h3><a href="../../docs/scrum4_slides.pdf">Scrum Project Slides PDF</a></h3>
+      <br />
+      <h3>Presentation Video</h3>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/pN9zii9YDt0" frameborder="0" allowfullscreen></iframe>
     </body>
 </html>
